Note controller restful actions done. Added association between User and Note.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>RspecOwnPractice</title>
+    <title>ac_final_assessment</title>
     <%= csrf_meta_tags %>
     <%= filestack_js_include_tag %>
     <%= filestack_js_init_tag %>
