username, relationships, avatar migrations done.

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,3 +1,23 @@
-<h1>Hi!</h1>
+<h1>INDEX page for User</h1>
+<h1>List of Users</h1>
+<ol>
+  <li>User 1</li>
+  <li>User 2</li>
+</ol>
+
+<h1>List of Notes of Users</h1>
+<ul>
+  <li>"How to write" by User 1</li>
+  <li>"How to code" by User 2</li>
+</ul>
 
 <%= link_to "Sign out", destroy_user_session_path, method: :delete, data: {confirm: "Are you sure?"} %>
+
+
+
+
+<!-- <%= link_to "Back", authenticated_user_homepage_path %>
+<%# link_to "Create Note", new_note_path %>
+<%# link_to "Edit Note", edit_note_path(@note) %>
+<%# link_to "Show Note", note_path(@note) %>
+<%# link_to "Destory Note", note_path(@note), method: :delete, data: {confirm: "Are you sure?"} %> -->
