--- a/app/views/users/home.html.erb
+++ b/app/views/users/home.html.erb
@@ -6,8 +6,9 @@
 
 <h1>List of Users</h1>
 <ol>
-  <%= @users.each do |user| %>
+  <% @users.each do |user| %>
     <li><%= link_to user.username, user_path(user) %></li>
+    <%= render partial: "users/partials/follow_form", locals: {user: user} %>
   <% end %>
 </ol>
 
@@ -15,10 +16,10 @@
 <%= link_to "Create Note", new_note_path %>
 <ul>
   <% @notes.each do |note| %>
-  <li><%= link_to note.title %> by <%= link_to note.user.username, user_path(current_user) %></li>
-  <%= link_to note.body %>
-    <%= f.button :submit %>
+    <li><%= link_to note.title %> by <%= link_to note.user.username, user_path(current_user) %></li>
+    <%= link_to note.body %>
   <% end %>
+
 </ul>
 
 table called likes
@@ -27,3 +28,6 @@ user_id
 note_id
 
 if current_user likes, input note_id and current_user id
+
+
+likes is like following but slightly different.
