--- a/app/views/notes/edit.html.erb
+++ b/app/views/notes/edit.html.erb
@@ -1,1 +1,5 @@
-<h1> This is EDIT for NOTES. </h1>
+<%= simple_form_for @note do |f| %>
+  <%= f.input :title %>
+  <%= f.input :body %>
+  <%= f.button :submit %>
+<% end %>
