--- a/app/views/users/partials/_follow_form.html.erb
+++ b/app/views/users/partials/_follow_form.html.erb
@@ -1,9 +1,11 @@
+<div id="follow_form">
   <% unless current_user == user %>
     <% unless current_user.following?(user) %>
-      <%= form_for(current_user.active_relationships.build) do |f| %>
+      <%= simple_form_for (current_user.active_relationships.build) do |f| %>
         <div><%= hidden_field_tag :followed_id, user.id %></div>
         <%= f.submit "Follow", class: "btn btn-primary my-button" %>
       <% end %>
     <% end %>
     <%= link_to 'Unfollow', relationship_path(user), method: :delete, class: "btn btn-danger" if current_user.following?(user)%>
   <% end %>
+</div>
