--- a/app/views/users/home.html.erb
+++ b/app/views/users/home.html.erb
@@ -26,9 +26,8 @@
         <%= f.submit "Like!", class: "btn btn-primary" %>
       <% end %> <!-- simple_form end -->
     <% else %>
-      <%= link_to "Unlike!", like_path(note), method: :delete, class: "btn btn-danger" if current_user.liked?(note) %>
+      <%= link_to "Unlike!", like_path(note), method: :delete, class: "btn btn-danger" %>
     <% end %>  <!-- unless current_user.liked? end -->
-
 
   <% end %><!-- @feed_notes.each do |note| end -->
 
